---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "if [[ -z ${FOO} ]]; then\nFOO=1\nmyfunc1() {\n    echo a\n}\nmyfunc2() {\n    local x\n    if [[ $x -ge 5 ]]; then\n        echo yes\n    fi\n}\nfi\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(IfClause(IfClauseCommand(
                condition: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Compound(ExtendedTest(ExtendedTestExprCommand(
                          expr: UnaryTest(StringHasZeroLength, Word(
                            value: "${FOO}",
                            loc: "[location]",
                          )),
                          loc: "[location]",
                        )), None),
                      ],
                    ),
                  ), Sequence),
                ]),
                then: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Simple(SimpleCommand(
                          prefix: Some(CommandPrefix([
                            AssignmentWord(Assignment(
                              name: VariableName("FOO"),
                              value: Scalar(Word(
                                value: "1",
                                loc: "[location]",
                              )),
                              loc: "[location]",
                            ), Word(
                              value: "FOO=1",
                              loc: "[location]",
                            )),
                          ])),
                        )),
                      ],
                    ),
                  ), Sequence),
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Function(FunctionDefinition(
                          fname: Word(
                            value: "myfunc1",
                            loc: "[location]",
                          ),
                          body: FunctionBody(BraceGroup(BraceGroupCommand(
                            list: CompoundList([
                              CompoundListItem(AndOrList(
                                first: Pipeline(
                                  seq: [
                                    Simple(SimpleCommand(
                                      word_or_name: Some(Word(
                                        value: "echo",
                                        loc: "[location]",
                                      )),
                                      suffix: Some(CommandSuffix([
                                        Word(Word(
                                          value: "a",
                                          loc: "[location]",
                                        )),
                                      ])),
                                    )),
                                  ],
                                ),
                              ), Sequence),
                            ]),
                            loc: "[location]",
                          )), None),
                        )),
                      ],
                    ),
                  ), Sequence),
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Function(FunctionDefinition(
                          fname: Word(
                            value: "myfunc2",
                            loc: "[location]",
                          ),
                          body: FunctionBody(BraceGroup(BraceGroupCommand(
                            list: CompoundList([
                              CompoundListItem(AndOrList(
                                first: Pipeline(
                                  seq: [
                                    Simple(SimpleCommand(
                                      word_or_name: Some(Word(
                                        value: "local",
                                        loc: "[location]",
                                      )),
                                      suffix: Some(CommandSuffix([
                                        Word(Word(
                                          value: "x",
                                          loc: "[location]",
                                        )),
                                      ])),
                                    )),
                                  ],
                                ),
                              ), Sequence),
                              CompoundListItem(AndOrList(
                                first: Pipeline(
                                  seq: [
                                    Compound(IfClause(IfClauseCommand(
                                      condition: CompoundList([
                                        CompoundListItem(AndOrList(
                                          first: Pipeline(
                                            seq: [
                                              Compound(ExtendedTest(ExtendedTestExprCommand(
                                                expr: BinaryTest(ArithmeticGreaterThanOrEqualTo, Word(
                                                  value: "$x",
                                                  loc: "[location]",
                                                ), Word(
                                                  value: "5",
                                                  loc: "[location]",
                                                )),
                                                loc: "[location]",
                                              )), None),
                                            ],
                                          ),
                                        ), Sequence),
                                      ]),
                                      then: CompoundList([
                                        CompoundListItem(AndOrList(
                                          first: Pipeline(
                                            seq: [
                                              Simple(SimpleCommand(
                                                word_or_name: Some(Word(
                                                  value: "echo",
                                                  loc: "[location]",
                                                )),
                                                suffix: Some(CommandSuffix([
                                                  Word(Word(
                                                    value: "yes",
                                                    loc: "[location]",
                                                  )),
                                                ])),
                                              )),
                                            ],
                                          ),
                                        ), Sequence),
                                      ]),
                                      loc: "[location]",
                                    )), None),
                                  ],
                                ),
                              ), Sequence),
                            ]),
                            loc: "[location]",
                          )), None),
                        )),
                      ],
                    ),
                  ), Sequence),
                ]),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
